bk_ida/gccida/g2/int_fits_type_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4820:17: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4820:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4820:47: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4820:39: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4831:17: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4831:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4831:47: error: expected expression
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/tree.c:4831:39: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&c->block.vars >= *( _OWORD *)&initial->block.vars ) 
                                      ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/int_fits_type_p/src/obj/tree.o] Error 1
